k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-resume-service
spec:
  selector:
    app: devops-resume
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
